data/diff_tests/wasmtime/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1188.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\01\7f\01\7f\60\00\01\7f\02\94\80\80\80\00\01\03"
    "\65\6e\76\0c\65\78\74\65\72\6e\61\6c\46\75\6e\63"
    "\00\00\03\82\80\80\80\00\01\01\07\8c\80\80\80\00"
    "\01\08\74\65\73\74\4c\6f\6f\70\00\01\0a\a3\80\80"
    "\80\00\01\9d\80\80\80\00\01\01\7f\41\00\21\00\03"
    "\7f\20\00\10\00\20\00\41\01\6a\21\00\20\00\41\0a"
    "\48\0d\00\0b\0b"
  )
""
)